tests/invalid/max_non_numeric/main.py
def run_case() -> None:
    x: bool = True

    y: bool = False

    z: bool = max(x, y)

if __name__ == "__main__":
    run_case()
